# Bridge-radar-

./: .env.example  .gitignore  ARCHITECTURE.md  Anchor.toml  BRIDGE_DISCOVERY.md  BRIDGE_REGISTRY.md  CONTRIBUTING.md  Cargo.toml  HEALTH_SCORE_STATUS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  PROGRESS.md  README.md  WHITEPAPER.md  attester.json  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
apps/api/: package.json  tsconfig.json
apps/api/src/: bridges.ts  config.ts  db.ts  defilama.ts  defillama-store.ts  index.ts
apps/dashboard/: next.config.mjs  package.json  tailwind.config.ts
apps/dashboard/app/: globals.css  layout.tsx  page.tsx
apps/dashboard/app/about/: page.tsx
apps/dashboard/app/bridges/: page.tsx
apps/dashboard/app/bridges/[id]/: page.tsx  score-chart.tsx
apps/dashboard/app/bridges/compare/: page.tsx
apps/dashboard/app/events/: page.tsx
apps/dashboard/components/: event-row.tsx  health-card.tsx  heartbeat-dot.tsx  live-feed.tsx
apps/dashboard/lib/: api.ts
crates/radar-alerter/: Cargo.toml
crates/radar-alerter/src/: main.rs
crates/radar-attester/: Cargo.toml
crates/radar-attester/src/: main.rs
crates/radar-core/: Cargo.toml
crates/radar-core/src/: adapter.rs  chain.rs  event.rs  health.rs  lib.rs  pricing.rs  storage.rs
crates/radar-core/src/bridges/: across.rs  allbridge.rs  atomiq.rs  axelar.rs  base_solana.rs  cctp.rs  debridge.rs  garden.rs  hyperlane.rs  layerzero.rs  mayan.rs  mod.rs  orderly.rs  portal.rs  relay.rs  rhinofi.rs  stargate.rs  wormhole.rs
crates/radar-core/src/defillama/: client.rs  mod.rs  types.rs
crates/radar-core/src/storage/: postgres.rs  sqlite.rs
crates/radar-defillama/: Cargo.toml
crates/radar-defillama/src/: main.rs
crates/radar-indexer-evm/: Cargo.toml
crates/radar-indexer-evm/src/: main.rs
crates/radar-indexer-solana/: Cargo.toml
crates/radar-indexer-solana/src/: main.rs  poll.rs  ws.rs
crates/radar-scorer/: Cargo.toml
crates/radar-scorer/src/: main.rs
crates/radar-watchers/: Cargo.toml
crates/radar-watchers/src/: frontend.rs  main.rs  oracle.rs  signer.rs
migrations/: 0001_init.sql  0002_defillama_cache.sql  0003_seed_relay_bridge.sql  0004_seed_across_bridge.sql  0005_seed_garden_bridge.sql  0006_seed_base_solana_bridge.sql
programs/radar-oracle/: Cargo.toml  README.md  rust-toolchain.toml
programs/radar-oracle/src/: lib.rs
