[workspace]
resolver = "2"
members = ["crates/*"]
exclude = ["programs/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
authors = ["Pratik Kale <pratikkale7661@gmail.com>"]
repository = "https://github.com/Pratikkale26/bridge-radar"
homepage = "https://github.com/Pratikkale26/bridge-radar"
readme = "README.md"

[workspace.dependencies]
# async + runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"

# serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# time + ids
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# errors + logging
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# config
dotenvy = "0.15"

# storage
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "sqlite",
    "postgres",
    "macros",
    "chrono",
    "uuid",
    "json",
] }

# http / rpc
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
url = "2"

# crypto / chain primitives — kept light at the workspace root, indexers pull
# the heavier deps locally.
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
debug = false
overflow-checks = true

[profile.dev]
opt-level = 0
debug = true
