[package]
name = "radar-alerter"
description = "Bridge Radar — Telegram + Discord + webhook alerter for events and score drops."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
radar-core = { path = "../radar-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
reqwest = { workspace = true }
sqlx = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[[bin]]
name = "radar-alerter"
path = "src/main.rs"
