[package]
name = "radar-core"
description = "Bridge Radar — shared types, storage trait, bridge adapter trait."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

