[package]
name = "radar-defillama"
description = "Bridge Radar — DeFiLlama Solana data layer sync (independent schedules per category)."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
radar-core = { path = "../radar-core" }
tokio = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }

[[bin]]
name = "radar-defillama"
path = "src/main.rs"
