[package]
name = "radar-indexer-evm"
description = "Bridge Radar — EVM event indexer (eth_getLogs polling per chain)."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
radar-core = { path = "../radar-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
reqwest = { workspace = true }

[[bin]]
name = "radar-indexer-evm"
path = "src/main.rs"
