[package]
name = "radar-watchers"
description = "Bridge Radar — periodic detectors: signer-set, frontend hash, oracle staleness."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
radar-core = { path = "../radar-core" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }

[[bin]]
name = "radar-watchers"
path = "src/main.rs"
