[package]
name = "radar-oracle"
version = "0.1.0"
description = "Bridge Radar — on-chain Health Score oracle"
edition = "2021"
license = "MIT"
repository = "https://github.com/Pratikkale26/bridge-radar"

# Anchor builds this crate standalone (not as a member of the parent
# workspace at the repo root). The empty [workspace] table tells cargo to
# stop walking up the tree.
[workspace]

[lib]
crate-type = ["cdylib", "lib"]
name = "radar_oracle"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "1.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
